<resources>
    <string name="app_name">Vidar</string>
    <string name="defaut">[Erreur  >:| ]</string>
    <string name="version">version 1.7.1 BETA</string>
    <string name="notes_version">-Possibilité de changer la voix\n-Scanneur disponible en mode portrait\n-Accès hors-ligne aux données\n-Suppression de conversation possible\n-Résolution de bugs mineurs \n-Amélioration de l\'interface\n[1.7.1]-Résolution de bugs mineurs (effacement des messages lors du changement de pseudo, et erreur non capturée lors de la fin d\'activité)\n[1.7.1]-Ecran de contact</string>
    <string name="hello_blank_fragment">Rien pour le moment :.(</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="txt_titre_config_QR">Configuration du QR-code</string>
    <string name="txt_creer_QR">Créer un QR-code</string>
    <string name="txt_indic_message_dessus_QR">Message à afficher au dessus du code barre</string>
    <string name="btn_liste">MODIFIER</string>
    <string name="txt_indic_msg_lu">Message à lire</string>
    <string name="txt_indic_msg_debut_conv">Message au début de la conversation</string>
    <string name="msg_defaut">[Aucun]</string>
    <string name="erreur">Une erreur est survenue</string>
    <string name="txt_titre_compte">Compte</string>
    <string name="txt_changer_pseudo">Changer de nom d\'utilisateur:</string>
    <string name="hint_nom_uti">Nom d\'utilisateur</string>
    <string name="btn_changer_mdp">Changer le mot de passe</string>
    <string name="btn_deco">Se déconnecter</string>
    <string name="txt_titre_affichage">Affichage</string>
    <string name="switch_mode_combre">Mode sombre</string>
    <string name="btn_reinit_app">Reinitialiser l\'application</string>
    <string name="defaut_scan_QR">Flash me</string>
    <string name="img_qr_code_flasher">QR-code à flasher</string>
    <string name="txt_mentions_legales">Ce QR-Code vous redirigera vers le site-web de IPIC-ASSO, pour vous permettre de discuter par message.\nAucune information ne sera collectée, aucun programme ne sera installé… \n Il s\'agit simplement d\'une interface de discussion</string>
    <string name="txt_defaut_msgèdessus_QR">TEXTE A AFFICHER \n\nblabla\n\nblabla\nbla\nbla\n\nBla</string>
    <string name="btn_lire_msg">Lire le message</string>
    <string name="txt_infos_scan">Scannez le QR-code ou rendez vous sur http://ipic-asso.ddns.net, puis entrez le code: \"</string>
    <string name="verite_generale">Ipic vaincra!</string>
    <string name="btn_pop_enr_msg">Enregistrer le message</string>
    <string name="btn_pop_rep_msg">Répondre au message</string>
    <string name="btn_ouvrir_conv">Ouvrir une conversation</string>
    <string name="btn_mes_convs">Mes conversations</string>
    <string name="btn_mes_msg">Messages</string>
    <string name="btn_vers_aide">aide</string>
    <string name="btn_options">options</string>
    <string name="hint_pseudo">Nom d\'utilisateur</string>
    <string name="btn_changer_btn">Changer le pseudo</string>
    <string name="hint_mdp">Mot de passe</string>
    <string name="btn_mdp_oublie">Mot de passe oublié</string>
    <string name="btn_connexion">Connexion</string>
    <string name="check_souviens_moi">Se souvenir de moi</string>
    <string name="hint_mail">Adresse mail</string>
    <string name="annuler">Annuler</string>
    <string name="pop_titre_deco">Déconnexion</string>
    <string name="pop_msg_deco">Voulez-vous vraiment vous déconnecter?</string>
    <string name="hint_nouv_mdp">Nouveau mot de passe</string>
    <string name="btn_se_co">Se connecter</string>
    <string name="txt_ou">OU</string>
    <string name="btn_s_inscr">S\'inscrire</string>
    <string name="txt_explic_co">Cette étape est nécessaire. Cela nous permettra d\'identifier les destinataires des discussions</string>
    <string name="txt_err_mdp_court">Utilisez un mot de passe d\'au moins 6 caractères</string>
    <string name="img_profil">image de profil de votre interlocuteur</string>
    <string name="txt_pseudo_dest">Monsieur X</string>
    <string name="img_btn_choix_msg">Choisir un messages enregistré</string>
    <string name="hint_votre_msg">Votre message</string>
    <string name="img_btn_envoyer">Envoyer le message</string>
    <string name="btn_lire_txt">Lire le texte</string>
    <string name="hint_intitule">Intitulé</string>
    <string name="hint_msg">Message</string>
    <string name="btn_enr">Enregistrer</string>
    <string name="btn_supr">Supprimer</string>
    <string name="txt_pas_de_conv">Vous n\'avez aucune conversation en cours pour le moment.</string>
    <string name="img_nouv_msg">Bouton pour créer un nouveau message.</string>
    <string name="txt_instruc_liste_msg">Pour lire et modifier les messages enregistrés appuyez dessus.\n Pour en créer un nouveau, utilisez le bouton vert</string>
    <string name="scroll_dsc_liste_msg_enr">liste des messages enregistrés. Appuyez sur l\'un d\'eux pour le lire ou le modifier.</string>
    <string name="txt_date">date: XX/XX/XXXX</string>
    <string name="txt_objet">OBJET: demande…</string>
    <string name="txt_corps">blablablabblablablanblablablablablbablablbalablablablablablablablablablabla</string>
    <string name="btn_notes_version">Notes de version</string>
    <string name="btn_fermer">Fermer</string>
    <string name="btn_pol_conf">politique de confidentialité</string>
    <string name="toast_maj_mdp">Mot de passe mis à jour</string>
    <string name="btn_choix_voix">Voix</string>
    <string name="dsc_supr_conv">Supprimer définitivement la conversation</string>
    <string name="txt_fin_conv">Votre correspondant a mis fin à cette conversation</string>
    <string name="btn_contact">Nous contacter</string>
    <string name="valider">Valider</string>
    <string name="txt_infos_contact">Cette application est développée par l\'association IPIC-ASSO.\nPour toute question, réclamation, ou suggestion d\'amélioration, nous sommes à votre écoute sur ipic.assistance@protonmail.com</string>
    <string name="txt_vers_site">Visiter notre site web</string>
    <string name="btn_env_msg">Envoyer un message</string>
    <string name="dsc_logo">logo IPIC-ASSO</string>
    <string name="txt_info_assos">Association IPIC-ASSO\n52 Rue Alix Laugier, \n84240 La Motte d\'Aigues\ntel : 07 69 51 71 05\nmail: ipic.assistance@protonmail.com\nConception d\'outils et de services dans une perspective innovante ou pour répondre à un besoin concret.</string>
</resources>