<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Parametres">

    <TextView
        android:id="@+id/textView11"
        style="@style/TextViewFond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_titre_compte"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />

    <Button
        android:id="@+id/change_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/bleu_doux"
        android:text="@string/btn_changer_btn" />

    <Button
        android:id="@+id/change_mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/bleu_doux"
        android:text="@string/btn_changer_mdp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/deco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/btn_deco"
        app:icon="@drawable/ic_baseline_logout_24" />

    <TextView
        android:id="@+id/textView12"
        style="@style/TextViewFond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_titre_affichage"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_baseline_image_24" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_mode_sombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:checked="true"
        android:text="@string/switch_mode_combre"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            style="@style/Widget.AppCompat.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/btn_choix_voix"
            android:textSize="16sp" />

        <Button
            android:id="@+id/choisit_voix"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_choix_voix"
            app:strokeWidth="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reinit_app"
        android:visibility="gone"
        app:backgroundTint="@color/gris_fonce" />

    <Button
        android:id="@+id/notes_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gaucher"
        android:text="@string/btn_notes_version"
        android:textColor="@color/faux_noir"
        app:icon="@drawable/ic_outline_info_24"
        app:iconTint="@color/faux_noir" />
    <Button
        android:id="@+id/politique_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gaucher"
        android:text="@string/btn_pol_conf"
        android:textColor="@color/faux_noir"
        app:icon="@drawable/baseline_open_in_new_24"
        app:iconTint="@color/faux_noir" />

    <Button
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gaucher"
        android:text="@string/btn_contact"
        android:textColor="@color/faux_noir"
        app:icon="@drawable/baseline_contact_mail_24"
        app:iconTint="@color/faux_noir" />
</LinearLayout>