<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LanceDiscussion">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lire_texte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_volume_up_24"
        app:backgroundTint="#4BFF52"
        android:contentDescription="@string/btn_lire_msg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_haut_Qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_defaut_msgèdessus_QR"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/instruction_scan"
                style="@style/TextViewFond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaut_scan_QR"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/img_qr_code_flasher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_mentions_legales"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>