<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiviteDiscussion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fond_profil"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/image_profile_dis"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/img_profil"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/utilisateur_conv_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/txt_pseudo_dest"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/supre_conv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/dsc_supr_conv"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclage_de_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="#3C9F9F9F" />

    <LinearLayout
        android:id="@+id/redacteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        tools:visibility="gone">

        <ImageButton
            android:id="@+id/liste_messages_enr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/img_btn_choix_msg"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_text_snippet_24" />

        <EditText
            android:id="@+id/mon_message"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_votre_msg"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/envoyer_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/img_btn_envoyer"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_send_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/conv_terminée"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/fond_profil"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/txt_fin_conv"
        android:textStyle="italic"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>